--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,13 @@ repositories {
 }
 
 dependencies {
-    implementation('org.projectlombok:lombok')
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compileOnly 'com.h2database:h2'
     implementation('org.springframework.boot:spring-boot-starter-web')
+    testCompileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'
+    testCompileOnly 'com.h2database:h2'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
