--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,15 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'com.h2database:h2'
+    compileOnly 'org.springframework.boot:spring-boot-starter-mustache'
     implementation('org.springframework.boot:spring-boot-starter-web')
     testCompileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'
     testCompileOnly 'com.h2database:h2'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testCompileOnly 'org.springframework.boot:spring-boot-starter-mustache'
+
 }
 
 test {
