--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:oracle:thin:@118.67.135.31:1521:xe
+spring.datasource.username=arume
+spring.datasource.password=AitToLiss
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
